--- a/homework3/package.json
+++ b/homework3/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "homework1",
-  "version": "1.0.0",
+  "name": "hw3",
+  "author": "ArieW",
+  "version": "0.0.0",
+  "description": "Webpacked version of the Facebook tutorial",
+  "license": "ISC",
   "main": "server.js",
   "dependencies": {
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
+    "css-loader": "^0.25.0",
+    "express": "^4.4.5",
+    "html-webpack-plugin": "^2.24.0",
+    "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1",
+    "marked": "^0.5.1",
     "mongodb": "^2.2.19",
-    "react": "^16.6.3"
+    "nib": "^1.1.2",
+    "postcss-loader": "^1.0.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "remarkable": "^1.7.1",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "webpack": "^1.13.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-dev-server": "^1.16.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress",
+    "dev": "node server.js & webpack-dev-server --progress",
     "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
