--- a/lab13/package.json
+++ b/lab13/package.json
@@ -19,6 +19,7 @@
     "html-webpack-plugin": "^2.24.0",
     "jquery": "^3.1.1",
     "jquery-ui": "^1.12.1",
+    "marked": "^0.5.1",
     "mongodb": "^2.2.11",
     "postcss-loader": "^1.0.0",
     "react": "^15.3.2",
